# swarm-research

./: .env.example  .gitignore  README.md  TODO.md  engine.py  pyproject.toml  run.py
examples/algo-opt/: eval.py  task.md
examples/bio-opt/: eval.py  task.md
examples/compress-opt/: eval.py  task.md
examples/config-opt/: eval.py  task.md
examples/copy-optimize/: eval.py  strategy.py  task.md
examples/fade-optimize/: eval.py  strategy.py  task.md
examples/game-ai/: eval.py  task.md
examples/meta-optimize/: eval.py  task.md
examples/ml-opt/: eval.py  task.md
examples/multi-opt/: eval.py  task.md
examples/num-opt/: eval.py  task.md
examples/scheduler/: eval.py  task.md
examples/speed-opt/: .gitignore  eval.py  task.md
examples/tsp-opt/: eval.py  task.md
examples/webhunter-prompts/: eval.py  task.md
experiments/: README_REVERT.md  ablation.py  ablation_board.py  ablation_depth.py  ablation_extra_runs.py  ablation_parallel.py  ablation_rounds.py  ablation_scheduler.py  ablation_scheduler_extra.py
experiments/results/: ablation_board_log.txt  ablation_board_raw.json  ablation_board_summary.md  ablation_depth_log.txt  ablation_depth_raw.json  ablation_depth_summary.md  ablation_extra_runs_log.txt  ablation_extra_runs_raw.json  ablation_log.txt  ablation_parallel_log.txt  ablation_parallel_raw.json  ablation_parallel_summary.md  ablation_raw.json  ablation_summary.md  (+8 more)
paper/: demo.tape  demo_script.py  figures.py  main.tex  neurips_2024.sty  paper.md  references.bib
tests/: conftest.py  test_backtrack_engine.py  test_multifile.py  test_tree.py
